--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BloomVue - AI-Powered Floral Design Mockup Tool</title>
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +16,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
+                    <img src="images/logo.png" alt="BloomVue Logo" class="logo-image">
                     <span class="brand-bloom">Bloom</span><span class="brand-vue">Vue</span>
                 </div>
                 <nav class="nav">
@@ -49,6 +51,7 @@
                     <div class="decorative-element"></div>
                     <div class="mockup">
                         <div class="screen">
+                            <img src="images/mockup-interface.png" alt="BloomVue application interface showing floral mockup generation" class="interface-image">
                             <div class="ai-prompt">
                                 <span class="prompt-prefix">Creating:</span> 
                                 <span class="prompt-text">Elegant white roses with eucalyptus in a modern vase</span>
@@ -69,28 +72,40 @@
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">
+                        <!-- Font Awesome icon as fallback -->
                         <i class="fas fa-magic"></i>
+                        <!-- Custom icon option -->
+                        <!-- <img src="images/icon-ai-mockup.png" alt="AI Mockup Icon" class="feature-icon-image"> -->
                     </div>
                     <h3>AI-Powered Mockups</h3>
                     <p>Create realistic floral arrangement previews using simple text prompts, inspiration photos, or direct uploads. Help clients visualize what they're getting.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
+                        <!-- Font Awesome icon as fallback -->
                         <i class="fas fa-images"></i>
+                        <!-- Custom icon option -->
+                        <!-- <img src="images/icon-input-options.png" alt="Input Options Icon" class="feature-icon-image"> -->
                     </div>
                     <h3>Versatile Input Options</h3>
                     <p>Generate designs from text descriptions, upload inspiration images, or with pro membership, directly upload existing proposals for the effortless mockup generation.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
+                        <!-- Font Awesome icon as fallback -->
                         <i class="fas fa-file-contract"></i>
+                        <!-- Custom icon option -->
+                        <!-- <img src="images/icon-proposal.png" alt="Proposal Icon" class="feature-icon-image"> -->
                     </div>
                     <h3>Proposal Pro</h3>
                     <p>Integrate your mockups directly into professional client proposals to help secure approvals.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
+                        <!-- Font Awesome icon as fallback -->
                         <i class="fas fa-tasks"></i>
+                        <!-- Custom icon option -->
+                        <!-- <img src="images/icon-project.png" alt="Project Management Icon" class="feature-icon-image"> -->
                     </div>
                     <h3>Project Management</h3>
                     <p>Organize your designs by client and event.</p>
@@ -152,7 +167,7 @@
             </div>
             <div class="value-image">
                 <div class="image-container">
-                    <div class="decorative-pattern"></div>
+                    <img src="images/mockup-example.jpg" alt="Example of a floral arrangement mockup created with BloomVue" class="value-image-content">
                 </div>
             </div>
         </div>
