--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section class="hero">
     <div class="container">
       <div class="hero-content">
-        <h1>Instant Floral Mockups&nbsp;&#8212;&nbsp;Client “Yes!” in Minutes</h1>
+        <h1>Visualize Designs Instantly. Less Explaining, More Creating. </h1>
         <p>
           BloomVue turns inspiration boards into crystal-clear visuals
           <em>while you’re still in the meeting</em>, so approvals come faster
